--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,16 +17,16 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '11'
-          distribution: 'temurin'
+          distribution: 'adopt'
           cache: maven
       - name: Build with Maven
         run: mvn -B package --file pom.xml
         
       - name: Build the docker image
-        run: docker build . --file Dockerfile --tag built2lead/getting-started:1.0.0
+        run: docker build -t built2lead/getting-started:1.0.0 .
          
       - name: Login to Dockerhub Registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
         
       - name: Build and push
-        run: docker push built2lead/getting-started:1.0.0
+        run: docker push built2lead/getting-started:1.0.0 .
