--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,10 @@ jobs:
         run: mvn -B package --file pom.xml
         
       - name: Build the docker image
-        run: docker build -t built2lead/getting-started:1.0.0 .
+        run: docker build -t built2lead/getting-started:0.0.1 .
          
       - name: Login to Dockerhub Registry
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
         
       - name: Build and push
-        run: docker push built2lead/getting-started:1.0.0 .
+        run: docker push built2lead/getting-started:0.0.1
